Fix some errors and update to 1.5